# random

./: CMakeLists.txt  package.xml
include/rhoban_random/: gaussian_distribution.h  multivariate_gaussian.h  tools.h
include/starkit_random/: gaussian_distribution.h  multivariate_gaussian.h  tools.h
src/rhoban_random/: gaussian_distribution.cpp  multivariate_gaussian.cpp  sources.cmake  tools.cpp
src/starkit_random/: gaussian_distribution.cpp  multivariate_gaussian.cpp  tools.cpp
